# xipd

./: .cvsignore  .gitignore  Makefile.am  Makefile.in  README  configure.ac  dpms.c  dpms.h  proc.c  proc.h  xipd.c
